* Fixed Grunt file to listen on IP now (instead of just local host) for mobile testing. * Added meta info to viewport in index for mobile * Mobile style changes (around fitting on the screen) * Added scroll to 0 for Safari on iPhone on load, to hide the URL bar. * Passed board (canvas) to init-controls to compare click event to -- don't like passing it, but player is passed the same way. * Mostly worked on adding click and touch controls - touches are also clicks, so just using clicks for now (but it's slow on mobile). * Need to get touch controls working / ignoring clicks, or just remove clicks. * Also, hit points are far edges of the canvas - which is really sucky UI.  It works, but need to figure out something better.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,8 +5,15 @@ body {
   text-align: center;
 }
 
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; 
+}
+
 .main {
   width: 980px;
+  margin:0 auto;
   text-align: center;
 }
 
@@ -19,14 +26,14 @@ canvas {
 
 .title {
   text-align: center;
-  font-size: 2em;
+  font-size: 1em;
   color: #080;
 }
 
 .instructions {
   text-align: center;
-  /*font-size: 2em;*/
   color: #080;
+  padding:1em;;
 }
 
 .debug {
